--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/cli": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
     "body-parser": "^2.2.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "mongodb": "^6.18.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.2"
   },
