--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
+    "mongoose": "^8.16.5",
     "multer": "^2.0.2",
     "mysql2": "^3.14.2"
   },
