--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.2"
   },
   "devDependencies": {
