--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " nodemon contact.js"
+    "start": " nodemon contact.js",
+    "dev": "nodemon contact.js"
   },
   "author": "",
   "license": "ISC",
